-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P4
-
Affects Version/s: 11, 17, 20, 21
-
Component/s: hotspot
-
b21
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8357588 | 17.0.16 | Satyen Subramaniam | P4 | Resolved | Fixed | b05 |
I hit:
# Internal Error (/home/roland/jdk-jdk/src/hotspot/share/opto/compile.cpp:4003), pid=2305479, tid=2305494
# assert(false) failed: malformed control flow
I'll provide a test case in the PR.
# Internal Error (/home/roland/jdk-jdk/src/hotspot/share/opto/compile.cpp:4003), pid=2305479, tid=2305494
# assert(false) failed: malformed control flow
I'll provide a test case in the PR.
- backported by
-
JDK-8357588 C2: "malformed control flow" assert due to missing safepoint on backedge with a switch
-
- Resolved
-
- relates to
-
JDK-8303951 Add asserts before record_method_not_compilable where possible
-
- Resolved
-
- links to
-
Commit
openjdk/jdk/e0774bed
-
Commit(master)
openjdk/jdk17u-dev/01a62e38
-
Review
openjdk/jdk/13688
-
Review(master)
openjdk/jdk17u-dev/3589
(1 links to)