8306997: C2: "malformed control flow" assert due to missing safepoint on backedge with a switch

Backport-of: e0774bed2d2fcd850f5ca6884dd7aeb45f0bdaef